Do not reference immutable node builders
Use Builders/ImmutableNodes instead of direct implementation reference.
Also use fluent nature of builders, which flushes out a number of unused
constructs, which we remove here.

Change-Id: I8803da6a244f4f4dceaf4da06934b0f8df24b827
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>